revert: restore original toList() calls on BlockSet (it has its own toList() method)